--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
 [build.environment]
   NODE_VERSION = "18"
 
-# Next.js specific configuration
+# Next.js plugin for proper handling
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
@@ -16,15 +16,16 @@
   NEXT_PUBLIC_SITE_URL = "https://your-domain.netlify.app"
   NODE_ENV = "production"
 
-# Redirects for SPA behavior
+# Next.js redirects - let the plugin handle routing
 [[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["admin"]}
+  to = "/404.html"
+  status = 404
 
-# API routes handling
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200 
+# Ensure API routes work properly
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization" 
