--- a/.gitignore
+++ b/.gitignore
@@ -105,4 +105,20 @@ electron-app/dist/
 
 # Temporary files
 tmp/
-temp/ 
+temp/
+
+# Added by Claude Task Master
+dev-debug.log
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+# Task files
+tasks.json
+tasks/ 
