--- a/complyze-extension-v2/manifest.json
+++ b/complyze-extension-v2/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Complyze - AI Prompt Security & Optimization",
   "description": "Secure AI prompts across ChatGPT, Claude, Gemini with real-time PII detection, optimization, and compliance monitoring.",
-  "version": "2.0.0",
+  "version": "2.3.1",
   "manifest_version": 3,
   "icons": {
     "16": "icons/icon-16.png",
@@ -48,7 +48,11 @@
       ],
       "js": [
         "content.js",
-        "prompt-interceptor.js"
+        "prompt-interceptor.js",
+        "floating-ui.js",
+        "debug-reload.js",
+        "force-floating-ui.js",
+        "debug-auth.js"
       ],
       "run_at": "document_end"
     }
@@ -56,24 +60,20 @@
   "background": {
     "service_worker": "background.js"
   },
-  "action": {
-    "default_popup": "popup.html",
-    "default_title": "Complyze - AI Prompt Security",
-    "default_icon": {
-      "16": "icons/icon-16.png",
-      "24": "icons/icon-24.png",
-      "32": "icons/icon-32.png",
-      "48": "icons/icon-48.png",
-      "64": "icons/icon-64.png",
-      "128": "icons/icon-128.png"
-    }
-  },
   "web_accessible_resources": [
     {
       "resources": [
         "injectUI.js",
         "extension-debug.js",
-        "prompt-interceptor.js"
+        "prompt-interceptor.js",
+        "popup.html",
+        "popup.js",
+        "icons/icon-16.png",
+        "icons/icon-24.png", 
+        "icons/icon-32.png",
+        "icons/icon-48.png",
+        "icons/icon-64.png",
+        "icons/icon-128.png"
       ],
       "matches": [
         "<all_urls>"
