--- a/complyze-extension-v2/manifest.json
+++ b/complyze-extension-v2/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Complyze - AI Prompt Security & Optimization",
   "description": "Secure AI prompts across ChatGPT, Claude, Gemini with real-time PII detection, optimization, and compliance monitoring.",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "manifest_version": 3,
   "icons": {
     "16": "icons/icon-16.png",
@@ -48,11 +48,7 @@
       ],
       "js": [
         "content.js",
-        "prompt-interceptor.js",
-        "floating-ui.js",
-        "debug-reload.js",
-        "force-floating-ui.js",
-        "debug-auth.js"
+        "floating-ui.js"
       ],
       "run_at": "document_end"
     }
